estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <div id="container">
-           <div id="post">
+           <div id="el gamer">
+               el gamer
                <h1>hacer el mejor gamer del mundo el 
                 mejor del mundo que a existido</h1>
         <p>y me la pela faker el puto y algun dia le 
