--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,8 @@
                 mejor del mundo que a existido</h1>
         <p>y me la pela faker el puto y algun dia le 
             voy a partir la madre a faker </p>
+            <p>pero nunca lo lograre por que soy un puto
+            pollero de mierda</p>
            </div>
        </div>
     <body>
